@@ -1,4 +1,15 @@
 
+Изменения в nginx 1.17.8                                          21.01.2020
+
+    *) Добавление: директива grpc_pass поддерживает переменные.
+
+    *) Исправление: при обработке pipelined-запросов по SSL-соединению мог
+       произойти таймаут; ошибка появилась в 1.17.5.
+
+    *) Исправление: в директиве debug_points при использовании HTTP/2.
+       Спасибо Даниилу Бондареву.
+
+
 Изменения в nginx 1.17.7                                          24.12.2019
 
     *) Исправление: на старте или во время переконфигурации мог произойти
