@@ -37,26 +37,24 @@ ngx_event_process_posted(ngx_cycle_t *cycle, ngx_queue_t *posted)
 
 
 void
-ngx_event_process_posted_next(ngx_cycle_t *cycle, ngx_queue_t *posted)
+ngx_event_move_posted_next(ngx_cycle_t *cycle)
 {
     ngx_queue_t  *q;
     ngx_event_t  *ev;
 
-    while (!ngx_queue_empty(posted)) {
-
-        q = ngx_queue_head(posted);
+    for (q = ngx_queue_head(&ngx_posted_next_events);
+         q != ngx_queue_sentinel(&ngx_posted_next_events);
+         q = ngx_queue_next(q))
+    {
         ev = ngx_queue_data(q, ngx_event_t, queue);
 
         ngx_log_debug1(NGX_LOG_DEBUG_EVENT, cycle->log, 0,
                       "posted next event %p", ev);
 
-        ngx_delete_posted_event(ev);
-
-        if (!ev->ready) {
-            ev->ready = 1;
-            ev->available = -1;
-        }
-
-        ev->handler(ev);
+        ev->ready = 1;
+        ev->available = -1;
     }
+
+    ngx_queue_add(&ngx_posted_events, &ngx_posted_next_events);
+    ngx_queue_init(&ngx_posted_next_events);
 }
